test/tests/stages/18_structures/invalid_types/invalid_member_operators/postfix_precedence.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(10)
  }
  ;
  return
  &
  identifier(x)
  ->
  identifier(a)
  ;
  }
